metrique-macro/src/snapshots/metrique_macro__tests__metrics_with_cow_lifetime.snap
---
source: metrique-macro/src/lib.rs
assertion_line: 2084
expression: parsed_file
---
struct Foo<'a> {
    a: Cow<'a, str>,
    b: usize,
}
#[doc(hidden)]
#[allow(clippy::type_complexity)]
pub struct FooEntry<'a> {
    #[deprecated(
        note = "these fields will become private in a future release. To introspect an entry, use `metrique::writer::test_util::test_entry`"
    )]
    #[doc(hidden)]
    a: <Cow<'a, str> as metrique::CloseValue>::Closed,
    #[deprecated(
        note = "these fields will become private in a future release. To introspect an entry, use `metrique::writer::test_util::test_entry`"
    )]
    #[doc(hidden)]
    b: <usize as metrique::CloseValue>::Closed,
}
const _: () = {
    impl<'a> FooEntry<'a> {
        #[doc(hidden)]
        #[inline(always)]
        fn __metrique_descriptor_run_0() -> &'static ::metrique::writer::core::EntryDescriptor {
            {
                static __METRIQUE__FLAGS_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                static __METRIQUE__SKIPPED_0: [::metrique::writer::core::FieldFlag; 0usize] = [];
                static __METRIQUE__FLAGS_1: [::metrique::writer::core::FieldFlag; 0usize] = [];
                static __METRIQUE__SKIPPED_1: [::metrique::writer::core::FieldFlag; 0usize] = [];
                static __METRIQUE__FIELDS: [::metrique::writer::core::FieldDescriptor; 2usize] = [
                    ::metrique::writer::core::FieldDescriptor::builder("a")
                        .pascal("A")
                        .snake("a")
                        .kebab("a")
                        .screaming_snake("A")
                        .flags(&__METRIQUE__FLAGS_0)
                        .skipped_flags(&__METRIQUE__SKIPPED_0)
                        .maybe_unit(
                            ::metrique::writer::core::Unit::to_option(
                                <<Cow<
                                    '_,
                                    str,
                                > as ::metrique::CloseValue>::Closed as ::metrique::writer::core::Value>::UNIT,
                            ),
                        )
                        .shape(
                            <<Cow<
                                '_,
                                str,
                            > as ::metrique::CloseValue>::Closed as ::metrique::writer::core::Value>::SHAPE,
                        )
                        .build(),
                    ::metrique::writer::core::FieldDescriptor::builder("b")
                        .pascal("B")
                        .snake("b")
                        .kebab("b")
                        .screaming_snake("B")
                        .flags(&__METRIQUE__FLAGS_1)
                        .skipped_flags(&__METRIQUE__SKIPPED_1)
                        .maybe_unit(
                            ::metrique::writer::core::Unit::to_option(
                                <<usize as ::metrique::CloseValue>::Closed as ::metrique::writer::core::Value>::UNIT,
                            ),
                        )
                        .shape(
                            <<usize as ::metrique::CloseValue>::Closed as ::metrique::writer::core::Value>::SHAPE,
                        )
                        .build(),
                ];
                static __METRIQUE__DESC: ::metrique::writer::core::EntryDescriptor = ::metrique::writer::core::EntryDescriptor::builder(
                        "Foo",
                        &__METRIQUE__FIELDS,
                    )
                    .maybe_timestamp(None)
                    .build();
                &__METRIQUE__DESC
            }
        }
    }
    #[expect(deprecated)]
    impl<'a, NS: ::metrique::NameStyle> ::metrique::InflectableEntry<NS>
    for FooEntry<'a> {
        fn write<'__metrique_write>(
            &'__metrique_write self,
            writer: &mut impl ::metrique::writer::EntryWriter<'__metrique_write>,
        ) {
            let __metrique_self = self;
            ::metrique::writer::EntryWriter::value(
                writer,
                {
                    struct APreserve;
                    impl ::metrique::concat::ConstStr for APreserve {
                        const VAL: &'static str = "a";
                    }
                    struct AKebab;
                    impl ::metrique::concat::ConstStr for AKebab {
                        const VAL: &'static str = "a";
                    }
                    struct APascal;
                    impl ::metrique::concat::ConstStr for APascal {
                        const VAL: &'static str = "A";
                    }
                    struct ASnake;
                    impl ::metrique::concat::ConstStr for ASnake {
                        const VAL: &'static str = "a";
                    }
                    ::metrique::concat::const_str_value::<
                        <NS as ::metrique::NameStyle>::Inflect<
                            APreserve,
                            APascal,
                            ASnake,
                            AKebab,
                        >,
                    >()
                },
                &__metrique_self.a,
            );
            ::metrique::writer::EntryWriter::value(
                writer,
                {
                    struct BPreserve;
                    impl ::metrique::concat::ConstStr for BPreserve {
                        const VAL: &'static str = "b";
                    }
                    struct BKebab;
                    impl ::metrique::concat::ConstStr for BKebab {
                        const VAL: &'static str = "b";
                    }
                    struct BPascal;
                    impl ::metrique::concat::ConstStr for BPascal {
                        const VAL: &'static str = "B";
                    }
                    struct BSnake;
                    impl ::metrique::concat::ConstStr for BSnake {
                        const VAL: &'static str = "b";
                    }
                    ::metrique::concat::const_str_value::<
                        <NS as ::metrique::NameStyle>::Inflect<
                            BPreserve,
                            BPascal,
                            BSnake,
                            BKebab,
                        >,
                    >()
                },
                &__metrique_self.b,
            );
        }
        fn sample_group(
            &self,
        ) -> impl ::std::iter::Iterator<
            Item = (::std::borrow::Cow<'static, str>, ::std::borrow::Cow<'static, str>),
        > {
            let __metrique_self = self;
            ::std::iter::empty()
        }
        fn descriptors(&self) -> ::metrique::writer::core::Descriptors<'_> {
            ::metrique::writer::core::Descriptors::available(
                ::std::iter::once(
                    ::metrique::writer::core::DescriptorRef::from_static(
                        FooEntry::__metrique_descriptor_run_0(),
                        <NS as ::metrique::NameStyle>::DESCRIPTOR_STYLE_INDEX,
                    ),
                ),
            )
        }
    }
};
impl<'a> ::metrique::writer::value::ObjectValue for FooEntry<'a> {
    fn write_object<'__a>(
        &'__a self,
        writer: &mut impl ::metrique::writer::EntryWriter<'__a>,
    ) {
        <Self as ::metrique::InflectableEntry<
            ::metrique::Identity,
        >>::write(self, writer);
    }
}
impl<'a> metrique::CloseValue for Foo<'a> {
    type Closed = FooEntry<'a>;
    fn close(self) -> Self::Closed {
        macro_rules! __metrique_self_expr {
            () => {
                self
            };
        }
        #[allow(deprecated)]
        FooEntry {
            a: metrique::CloseValue::close(__metrique_self_expr!().a),
            b: metrique::CloseValue::close(__metrique_self_expr!().b),
        }
    }
}
#[doc = concat!(
    "Metrics guard returned from [`", "Foo",
    "::append_on_drop`], closes the entry and appends the metrics to a sink when dropped."
)]
type FooGuard<Q = ::metrique::DefaultSink> = ::metrique::AppendAndCloseOnDrop<
    Foo<'static>,
    Q,
>;
#[doc = concat!(
    "Metrics handle returned from [`", "FooGuard", "::handle`], similar to an `Arc<",
    "FooGuard", ">`."
)]
type FooHandle<Q = ::metrique::DefaultSink> = ::metrique::AppendAndCloseOnDropHandle<
    Foo<'static>,
    Q,
>;
impl Foo<'static> {
    ///Creates an AppendAndCloseOnDrop that will be automatically appended to `sink` on drop.
    fn append_on_drop<
        Q: ::metrique::writer::EntrySink<::metrique::RootEntry<FooEntry<'static>>> + Send
            + Sync + 'static,
    >(self, sink: Q) -> FooGuard<Q> {
        ::metrique::append_and_close(self, sink)
    }
}
